--- a/views/repVotes.hbs
+++ b/views/repVotes.hbs
@@ -55,7 +55,7 @@
                 {{bill.bill_title}}
             </div>
             <div class="bill-title">
-                {{bill.conflicts}}
+                <b>{{bill.conflicts}}</b>
             </div>
             <div class="vote-record hidden">
                 {{bill.recorded_vote}}
